# splitar

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: main.rs
tests/: conftest.py  test_compress.py  test_dirs.py  test_simple.py
