[package]
name = "splitar"
version = "0.1.1"
edition = "2021"
authors = ["(C) 2022 Ivan Boldyrev"]
description = "A tool for content-aware splitting of tar files"
readme = "README.md"
license = "MIT"
repository = "https://github.com/monoid/splitar/"
keywords = ["tar", "archive", "archiving", "util"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
atty = "0.2.14"
chrono = "0.4.19"
clap = { version = "3.0.5", features = ["derive", "wrap_help"] }
env_logger = "0.9.0"
interruptable = "0.1.0"
libc = "0.2.112"
log = "0.4.14"
parse-size = { version = "1.0.0", features = ["std"] }
patricia_tree = "0.3.1"
tar = "0.4.38"
tempfile = "3.3.0"
termcolor = "1.1.1"
thiserror = "1.0.30"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctrlc = "3.2.1"
