[package]
name = "splitar"
version = "0.1.3"
edition = "2021"
authors = ["(C) 2023 Ivan Boldyrev"]
description = "A tool for content-aware splitting of tar files"
readme = "README.md"
license = "MIT"
repository = "https://github.com/monoid/splitar/"
keywords = ["tar", "archive", "archiving", "util"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive", "wrap_help"] }
env_logger = "0.11.10"
interruptable = "0.1.0"
is-terminal = "0.4.17"
libc = "0.2.183"
log = "0.4.29"
parse-size = { version = "1.1.0", features = ["std"] }
patricia_tree = "0.10.1"
tar = "0.4.45"
tempfile = "3.27.0"
termcolor = "1.4.1"
thiserror = "2.0.18"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctrlc = "3.5.2"
